Added credential issuance to wallet
- only MATTR is supported
- changed the API spec to allow this flow
